--- a/translations/ps/LC_MESSAGES/messages.po
+++ b/translations/ps/LC_MESSAGES/messages.po
@@ -20,19 +20,19 @@ msgstr ""
 
 #: templates/index.html:6 templates/index.html:12 templates/index.html:47
 msgid "Darakht-e Danesh Academi"
-msgstr "Pashto"
+msgstr "د درخت دانش اکاډمي"
 
 #: templates/index.html:16 templates/index.html:33
 msgid "DD Library"
-msgstr ""
+msgstr "د درخت دانش کتابتون"
 
 #: templates/index.html:17 templates/index.html:34
 msgid "DD Courses"
-msgstr ""
+msgstr "د درخت دانش کوزسونه"
 
 #: templates/index.html:18 templates/index.html:35
 msgid "DD Classroom"
-msgstr ""
+msgstr "د درخت دانش ټولګی"
 
 #: venv/Lib/site-packages/click/_termui_impl.py:496
 msgid "{editor}: Editing failed"
