--- a/translations/fa/LC_MESSAGES/messages.po
+++ b/translations/fa/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-08 09:30+0530\n"
+"POT-Creation-Date: 2022-12-28 11:25+0530\n"
 "PO-Revision-Date: 2022-11-08 09:33+0530\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fa\n"
@@ -18,19 +18,69 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.11.0\n"
 
-#: templates/index.html:6 templates/index.html:12 templates/index.html:47
+#: templates/ddlanding.html:6 templates/ddlanding.html:49
+#: templates/ddlanding.html:117
 msgid "Darakht-e Danesh Academi"
 msgstr "اکادمی درخت دانش"
 
-#: templates/index.html:16 templates/index.html:33
+#: templates/ddlanding.html:21
+msgid ""
+"Introducing <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-"
+"duron-mindful-gray\"><u>Darakht-e Danesh Academi</u></a>"
+msgstr ""
+"معرفی <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-"
+"duron-mindful-gray\"><u>اکادمی درخت دانش</u></a>"
+
+#: templates/ddlanding.html:25 templates/ddlanding.html:42
+msgid "Close"
+msgstr "نزدیک"
+
+#: templates/ddlanding.html:31
+msgid ""
+"darakhtdanesh.org (ddl.af) has a new look. We've brought together our "
+"open educational resource collection\n"
+"                            <a "
+"href=\"https://library.darakhtdanesh.org/en\" class=\"text-shade-of-"
+"orange hover:text-very-dark-shade-of-orange\">DD Library</a>, our "
+"asynchronous course platform\n"
+"                            <a href=\"https:/courses.darakhtdanesh.org/\""
+" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD "
+"Courses</a>, and our live teaching site\n"
+"                            <a "
+"href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange"
+" hover:text-very-dark-shade-of-orange\">DD Classroom</a> into a single "
+"landing page: <b>Darakht-e Danesh Academi</b>.\n"
+"                            You can access each of the individual sites "
+"by clicking on the corresponding red circle in the graphic.\n"
+"                            We are continuing to improve the site design!"
+msgstr ""
+"با گردآوری تمام منابع باز آموزشی زیر یک سقف، نمای   darakhtdanesh.org (ddl.af)را تغییر داده‌ایم."
+"                            <a "
+"href=\"https://library.darakhtdanesh.org/en\" class=\"text-shade-of-"
+"orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>, پایگاه کورس‌های ناهمزمان ما\n"
+"                            <a href=\"https:/courses.darakhtdanesh.org/\""
+" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">کورس‌های درخت دانش</a>,"
+"و پایگاه آموزشی ما\n"
+"                            <a "
+"href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange"
+" hover:text-very-dark-shade-of-orange\">صنوف درخت دانش</a> into a single "
+"landing page: <b>Darakht-e Danesh Academi</b>.\n"
+"برای وارد شدن به سایت مورد نظر تان، روی دایره‌ی سرخی که نام سایت در آن نوشته شده است، کلیک کنید"
+"ما روی بهتر شدن طرح و دیزاین سایت کار می‌کنیم."
+
+#: templates/ddlanding.html:51
+msgid "Select language"
+msgstr ""
+
+#: templates/ddlanding.html:69 templates/ddlanding.html:103
 msgid "DD Library"
 msgstr "کتاب‌خانه‌ی درخت دانش"
 
-#: templates/index.html:17 templates/index.html:34
+#: templates/ddlanding.html:70 templates/ddlanding.html:104
 msgid "DD Courses"
 msgstr "کورس‌های درخت دانش"
 
-#: templates/index.html:18 templates/index.html:35
+#: templates/ddlanding.html:71 templates/ddlanding.html:105
 msgid "DD Classroom"
 msgstr "صنف‌های درخت دانش"
 
