--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-12-28 11:25+0530\n"
+"POT-Creation-Date: 2022-12-28 12:32+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr ""
 
 #: templates/ddlanding.html:21
 msgid ""
-"Introducing <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-"
+"Introducing <a href=\"https://darakhtdanesh.org/\" class=\"hover:text-"
 "duron-mindful-gray\"><u>Darakht-e Danesh Academi</u></a>"
 msgstr ""
 
@@ -44,9 +44,10 @@ msgid ""
 " class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD "
 "Courses</a>, and our live teaching site\n"
 "                            <a "
-"href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange"
-" hover:text-very-dark-shade-of-orange\">DD Classroom</a> into a single "
-"landing page: <b>Darakht-e Danesh Academi</b>.\n"
+"href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" "
+"class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD "
+"Classroom</a> into a single landing page: <b>Darakht-e Danesh "
+"Academi</b>.\n"
 "                            You can access each of the individual sites "
 "by clicking on the corresponding red circle in the graphic.\n"
 "                            We are continuing to improve the site design!"
