--- a/translations/fa/LC_MESSAGES/messages.po
+++ b/translations/fa/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-12-28 11:25+0530\n"
+"POT-Creation-Date: 2022-12-28 12:32+0530\n"
 "PO-Revision-Date: 2022-11-08 09:33+0530\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fa\n"
@@ -25,11 +25,11 @@ msgstr "اکادمی درخت دانش"
 
 #: templates/ddlanding.html:21
 msgid ""
-"Introducing <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-"
+"Introducing <a href=\"https://darakhtdanesh.org/\" class=\"hover:text-"
 "duron-mindful-gray\"><u>Darakht-e Danesh Academi</u></a>"
 msgstr ""
-"معرفی <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-"
-"duron-mindful-gray\"><u>اکادمی درخت دانش</u></a>"
+"معرفی <a href=\"https://darakhtdanesh.org/\" class=\"hover:text-duron-"
+"mindful-gray\"><u>اکادمی درخت دانش</u></a>"
 
 #: templates/ddlanding.html:25 templates/ddlanding.html:42
 msgid "Close"
@@ -47,26 +47,28 @@ msgid ""
 " class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD "
 "Courses</a>, and our live teaching site\n"
 "                            <a "
-"href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange"
-" hover:text-very-dark-shade-of-orange\">DD Classroom</a> into a single "
-"landing page: <b>Darakht-e Danesh Academi</b>.\n"
+"href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" "
+"class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD "
+"Classroom</a> into a single landing page: <b>Darakht-e Danesh "
+"Academi</b>.\n"
 "                            You can access each of the individual sites "
 "by clicking on the corresponding red circle in the graphic.\n"
 "                            We are continuing to improve the site design!"
 msgstr ""
-"با گردآوری تمام منابع باز آموزشی زیر یک سقف، نمای   darakhtdanesh.org (ddl.af)را تغییر داده‌ایم."
-"                            <a "
-"href=\"https://library.darakhtdanesh.org/en\" class=\"text-shade-of-"
-"orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>, پایگاه کورس‌های ناهمزمان ما\n"
+"با گردآوری تمام منابع باز آموزشی زیر یک سقف، نمای   darakhtdanesh.org "
+"(ddl.af)را تغییر داده‌ایم.                            <a "
+"href=\"https://library.darakhtdanesh.org/fa\" class=\"text-shade-of-"
+"orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>, "
+"پایگاه کورس‌های ناهمزمان ما\n"
 "                            <a href=\"https:/courses.darakhtdanesh.org/\""
-" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">کورس‌های درخت دانش</a>,"
-"و پایگاه آموزشی ما\n"
+" class=\"text-shade-of-orange hover:text-very-dark-shade-of-"
+"orange\">کورس‌های درخت دانش</a>,و پایگاه آموزشی ما\n"
 "                            <a "
-"href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange"
+"href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" class=\"text-shade-of-orange"
 " hover:text-very-dark-shade-of-orange\">صنوف درخت دانش</a> into a single "
 "landing page: <b>Darakht-e Danesh Academi</b>.\n"
-"برای وارد شدن به سایت مورد نظر تان، روی دایره‌ی سرخی که نام سایت در آن نوشته شده است، کلیک کنید"
-"ما روی بهتر شدن طرح و دیزاین سایت کار می‌کنیم."
+"برای وارد شدن به سایت مورد نظر تان، روی دایره‌ی سرخی که نام سایت در آن "
+"نوشته شده است، کلیک کنیدما روی بهتر شدن طرح و دیزاین سایت کار می‌کنیم."
 
 #: templates/ddlanding.html:51
 msgid "Select language"
