--- a/translations/fa/LC_MESSAGES/messages.po
+++ b/translations/fa/LC_MESSAGES/messages.po
@@ -60,7 +60,7 @@ msgstr ""
 "href=\"https://library.darakhtdanesh.org/fa\" class=\"text-shade-of-"
 "orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>, "
 "پایگاه کورس‌های ناهمزمان ما\n"
-"                            <a href=\"https:/courses.darakhtdanesh.org/\""
+"                            <a href=\"https://courses.darakhtdanesh.org/\""
 " class=\"text-shade-of-orange hover:text-very-dark-shade-of-"
 "orange\">کورس‌های درخت دانش</a>,و پایگاه آموزشی ما\n"
 "                            <a "
