--- a/translations/fa/LC_MESSAGES/messages.po
+++ b/translations/fa/LC_MESSAGES/messages.po
@@ -55,20 +55,13 @@ msgid ""
 "by clicking on the corresponding red circle in the graphic.\n"
 "                            We are continuing to improve the site design!"
 msgstr ""
-"با گردآوری تمام منابع باز آموزشی زیر یک سقف، نمای   darakhtdanesh.org "
-"(ddl.af)را تغییر داده‌ایم.                            <a "
-"href=\"https://library.darakhtdanesh.org/fa\" class=\"text-shade-of-"
-"orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>, "
-"پایگاه کورس‌های ناهمزمان ما\n"
-"                            <a href=\"https://courses.darakhtdanesh.org/\""
-" class=\"text-shade-of-orange hover:text-very-dark-shade-of-"
-"orange\">کورس‌های درخت دانش</a>,و پایگاه آموزشی ما\n"
-"                            <a "
-"href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" class=\"text-shade-of-orange"
-" hover:text-very-dark-shade-of-orange\">صنوف درخت دانش</a> into a single "
-"landing page: <b>Darakht-e Danesh Academi</b>.\n"
-"برای وارد شدن به سایت مورد نظر تان، روی دایره‌ی سرخی که نام سایت در آن "
-"نوشته شده است، کلیک کنیدما روی بهتر شدن طرح و دیزاین سایت کار می‌کنیم."
+"معرفی <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-duron-mindful-gray\"><u>اکادمی درخت دانش</u></a>"
+"با گردآوری تمام منابع باز آموزشی زیر یک سقف، نمای darakhtdanesh.org (ddl.af) را تغییر داده‌ایم. حالا"
+"<a href=\"https://library.darakhtdanesh.org/en\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">کتاب‌خانه‌ی درخت دانش</a>، پایگاه منابع باز آموزشی ما"
+"<a href=\"https:/courses.darakhtdanesh.org/\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">کورس‌های درخت دانش</a>، و پایگاه آموزشی ما"
+"<a href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">صنوف درخت دانش</a> زیر سقف: <b>اکادمی درخت دانش</b> فعالیت میکند."
+"برای وارد شدن به سایت مورد نظر تان، روی دایره‌ی سرخی که نام سایت در آن نوشته شده است، کلیک کنید. "
+"ما روی بهتر شدن طرح و دیزاین سایت کار می‌کنیم!"
 
 #: templates/ddlanding.html:51
 msgid "Select language"
